[gd_scene load_steps=18 format=3 uid="uid://do3oya6flaxfd"]

[ext_resource type="Script" path="res://Combat.gd" id="1_lptxq"]
[ext_resource type="Resource" path="res://Goblin.tres" id="2_r3twd"]
[ext_resource type="Texture2D" uid="uid://blfhedt8tbndl" path="res://Solaria Demo Update 01.png" id="2_y2hhi"]
[ext_resource type="Texture2D" uid="uid://cu3cio41x831o" path="res://icon.svg" id="3_wr0f3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qdu6p"]
texture = ExtResource("2_y2hhi")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
27:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
0:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0

[sub_resource type="TileSet" id="TileSet_wa5ii"]
sources/0 = SubResource("TileSetAtlasSource_qdu6p")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fqwa"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpjl6"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31rjp"]
bg_color = Color(0.117647, 0.0588235, 0.0196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjwta"]
bg_color = Color(0.117647, 0.0588235, 0.0196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11txy"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3m1k"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emc3d"]
bg_color = Color(0.117647, 0.0588235, 0.0196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_p2ch6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_aqb3r"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7gc8c"]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bw660"]
_data = {
"RESET": SubResource("Animation_p2ch6"),
"enemy_damaged": SubResource("Animation_aqb3r"),
"enemy_died": SubResource("Animation_7gc8c")
}

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lptxq")
enemy = ExtResource("2_r3twd")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_wa5ii")
format = 2
layer_0/tile_data = PackedInt32Array(0, 327680, 0, 65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 262144, 327680, 0, 327680, 327680, 0, 393216, 327680, 0, 458752, 327680, 0, 524288, 327680, 0, 589824, 327680, 0, 655360, 327680, 0, 720896, 327680, 3, 786432, 327680, 3, 851968, 327680, 3, 917504, 327680, 3, 1, 327680, 0, 65537, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 327681, 327680, 0, 393217, 327680, 0, 458753, 327680, 0, 524289, 327680, 0, 589825, 327680, 0, 655361, 327680, 0, 720897, 327680, 3, 786433, 327680, 3, 851969, 327680, 3, 917505, 327680, 3, 2, 327680, 0, 65538, 327680, 0, 131074, 327680, 0, 196610, 327680, 0, 262146, 327680, 0, 327682, 327680, 0, 393218, 327680, 0, 458754, 327680, 0, 524290, 327680, 0, 589826, 327680, 0, 655362, 327680, 0, 720898, 327680, 3, 786434, 327680, 3, 851970, 327680, 3, 917506, 327680, 3, 3, 327680, 0, 65539, 327680, 0, 131075, 327680, 0, 196611, 327680, 0, 262147, 327680, 0, 327683, 327680, 0, 393219, 327680, 0, 458755, 327680, 0, 524291, 327680, 0, 589827, 327680, 0, 655363, 327680, 0, 720899, 327680, 3, 786435, 327680, 3, 851971, 327680, 3, 917507, 327680, 3, 4, 327680, 0, 65540, 327680, 0, 131076, 327680, 0, 196612, 327680, 0, 262148, 327680, 0, 327684, 327680, 0, 393220, 327680, 0, 458756, 327680, 0, 524292, 327680, 0, 589828, 327680, 0, 655364, 327680, 0, 720900, 327680, 3, 786436, 327680, 3, 851972, 327680, 3, 917508, 327680, 3, 5, 327680, 0, 65541, 327680, 0, 131077, 327680, 0, 196613, 327680, 0, 262149, 327680, 0, 327685, 327680, 0, 393221, 327680, 0, 458757, 327680, 0, 524293, 327680, 0, 589829, 327680, 0, 655365, 327680, 0, 720901, 327680, 3, 786437, 327680, 3, 851973, 327680, 3, 917509, 327680, 3, 6, 327680, 0, 65542, 327680, 0, 131078, 327680, 0, 196614, 327680, 0, 262150, 327680, 0, 327686, 327680, 0, 393222, 327680, 0, 458758, 327680, 0, 524294, 327680, 0, 589830, 327680, 0, 655366, 327680, 0, 720902, 327680, 3, 786438, 327680, 3, 851974, 327680, 3, 917510, 327680, 3, 7, 327680, 0, 65543, 327680, 0, 131079, 327680, 0, 196615, 327680, 0, 262151, 327680, 0, 327687, 327680, 0, 393223, 327680, 0, 458759, 327680, 0, 524295, 327680, 0, 589831, 327680, 0, 655367, 327680, 0, 720903, 327680, 3, 786439, 327680, 3, 851975, 327680, 3, 917511, 327680, 3, 8, 327680, 0, 65544, 327680, 0, 131080, 327680, 0, 196616, 327680, 0, 262152, 327680, 0, 327688, 327680, 0, 393224, 327680, 0, 458760, 327680, 0, 524296, 327680, 0, 589832, 327680, 0, 655368, 327680, 0, 720904, 327680, 3, 786440, 327680, 3, 851976, 327680, 3, 917512, 327680, 3, 9, 327680, 0, 65545, 327680, 0, 131081, 327680, 0, 196617, 327680, 0, 262153, 327680, 0, 327689, 327680, 0, 393225, 327680, 0, 458761, 327680, 0, 524297, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, 720905, 327680, 3, 786441, 327680, 3, 851977, 327680, 3, 917513, 327680, 3, 10, 327680, 0, 65546, 327680, 0, 131082, 327680, 0, 196618, 327680, 0, 262154, 327680, 0, 327690, 327680, 0, 393226, 327680, 0, 458762, 327680, 0, 524298, 327680, 0, 589834, 327680, 0, 655370, 327680, 0, 720906, 327680, 3, 786442, 327680, 3, 851978, 327680, 3, 917514, 327680, 3, 11, 327680, 0, 65547, 327680, 0, 131083, 327680, 0, 196619, 327680, 0, 262155, 327680, 0, 327691, 327680, 0, 393227, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, 589835, 327680, 0, 655371, 327680, 0, 720907, 327680, 3, 786443, 327680, 3, 851979, 327680, 3, 917515, 327680, 3, 12, 327680, 0, 65548, 327680, 0, 131084, 327680, 0, 196620, 327680, 0, 262156, 327680, 0, 327692, 327680, 0, 393228, 327680, 0, 458764, 327680, 0, 524300, 327680, 0, 589836, 327680, 0, 655372, 327680, 0, 720908, 327680, 3, 786444, 327680, 3, 851980, 327680, 3, 917516, 327680, 3, 13, 327680, 0, 65549, 327680, 0, 131085, 327680, 0, 196621, 327680, 0, 262157, 327680, 0, 327693, 327680, 0, 393229, 327680, 0, 458765, 327680, 0, 524301, 327680, 0, 589837, 327680, 0, 655373, 327680, 0, 720909, 327680, 3, 786445, 327680, 3, 851981, 327680, 3, 917517, 327680, 3, 14, 327680, 0, 65550, 327680, 0, 131086, 327680, 0, 196622, 327680, 0, 262158, 327680, 0, 327694, 327680, 0, 393230, 327680, 0, 458766, 327680, 0, 524302, 327680, 0, 589838, 327680, 0, 655374, 327680, 0, 720910, 327680, 3, 786446, 327680, 3, 851982, 327680, 3, 917518, 327680, 3, 15, 327680, 0, 65551, 327680, 0, 131087, 327680, 0, 196623, 327680, 0, 262159, 327680, 0, 327695, 327680, 0, 393231, 327680, 0, 458767, 327680, 0, 524303, 327680, 0, 589839, 327680, 0, 655375, 327680, 0, 720911, 327680, 3, 786447, 327680, 3, 851983, 327680, 3, 917519, 327680, 3, 16, 327680, 0, 65552, 327680, 0, 131088, 327680, 0, 196624, 327680, 0, 262160, 327680, 0, 327696, 327680, 0, 393232, 327680, 0, 458768, 327680, 0, 524304, 327680, 0, 589840, 327680, 0, 655376, 327680, 0, 720912, 327680, 3, 786448, 327680, 3, 851984, 327680, 3, 917520, 327680, 3, 17, 327680, 0, 65553, 327680, 0, 131089, 327680, 0, 196625, 327680, 0, 262161, 327680, 0, 327697, 327680, 0, 393233, 327680, 0, 458769, 327680, 0, 524305, 327680, 0, 589841, 327680, 0, 655377, 327680, 0, 720913, 327680, 3, 786449, 327680, 3, 851985, 327680, 3, 917521, 327680, 3, 18, 327680, 0, 65554, 327680, 0, 131090, 327680, 0, 196626, 327680, 0, 262162, 327680, 0, 327698, 327680, 0, 393234, 327680, 0, 458770, 327680, 0, 524306, 327680, 0, 589842, 327680, 0, 655378, 327680, 0, 720914, 327680, 3, 786450, 327680, 3, 851986, 327680, 3, 917522, 327680, 3, 19, 327680, 0, 65555, 327680, 0, 131091, 327680, 0, 196627, 327680, 0, 262163, 327680, 0, 327699, 327680, 0, 393235, 327680, 0, 458771, 327680, 0, 524307, 327680, 0, 589843, 327680, 0, 655379, 327680, 0, 720915, 327680, 3, 786451, 327680, 3, 851987, 327680, 3, 917523, 327680, 3, 20, 327680, 0, 65556, 327680, 0, 131092, 327680, 0, 196628, 327680, 0, 262164, 327680, 0, 327700, 327680, 0, 393236, 327680, 0, 458772, 327680, 0, 524308, 327680, 0, 589844, 327680, 0, 655380, 327680, 0, 720916, 327680, 3, 786452, 327680, 3, 851988, 327680, 3, 917524, 327680, 3, 21, 327680, 0, 65557, 327680, 0, 131093, 327680, 0, 196629, 327680, 0, 262165, 327680, 0, 327701, 327680, 0, 393237, 327680, 0, 458773, 327680, 0, 524309, 327680, 0, 589845, 327680, 0, 655381, 327680, 0, 720917, 327680, 3, 786453, 327680, 3, 851989, 327680, 3, 917525, 327680, 3, 22, 327680, 0, 65558, 327680, 0, 131094, 327680, 0, 196630, 327680, 0, 262166, 327680, 0, 327702, 327680, 0, 393238, 327680, 0, 458774, 327680, 0, 524310, 327680, 0, 589846, 327680, 0, 655382, 327680, 0, 720918, 327680, 3, 786454, 327680, 3, 851990, 327680, 3, 917526, 327680, 3, 23, 327680, 0, 65559, 327680, 0, 131095, 327680, 0, 196631, 327680, 0, 262167, 327680, 0, 327703, 327680, 0, 393239, 327680, 0, 458775, 327680, 0, 524311, 327680, 0, 589847, 327680, 0, 655383, 327680, 0, 720919, 327680, 3, 786455, 327680, 3, 851991, 327680, 3, 917527, 327680, 3, 24, 327680, 0, 65560, 327680, 0, 131096, 327680, 0, 196632, 327680, 0, 262168, 327680, 0, 327704, 327680, 0, 393240, 327680, 0, 458776, 327680, 0, 524312, 327680, 0, 589848, 327680, 0, 655384, 327680, 0, 720920, 327680, 3, 786456, 327680, 3, 851992, 327680, 3, 917528, 327680, 3, 25, 327680, 0, 65561, 327680, 0, 131097, 327680, 0, 196633, 327680, 0, 262169, 327680, 0, 327705, 327680, 0, 393241, 327680, 0, 458777, 327680, 0, 524313, 327680, 0, 589849, 327680, 0, 655385, 327680, 0, 720921, 327680, 3, 786457, 327680, 3, 851993, 327680, 3, 917529, 327680, 3, 26, 327680, 0, 65562, 327680, 0, 131098, 327680, 0, 196634, 327680, 0, 262170, 327680, 0, 327706, 327680, 0, 393242, 327680, 0, 458778, 327680, 0, 524314, 327680, 0, 589850, 327680, 0, 655386, 327680, 0, 720922, 327680, 3, 786458, 327680, 3, 851994, 327680, 3, 917530, 327680, 3)

[node name="PlayerContainer1" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 77.0
offset_right = 256.0
offset_bottom = 282.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PlayerContainer1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerContainer1"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0fqwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_cpjl6")
value = 50.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="PlayerContainer1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wr0f3")
stretch_mode = 3

[node name="PlayerContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 29.0
offset_right = 208.0
offset_bottom = 234.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PlayerContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerContainer2"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0fqwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_cpjl6")
value = 50.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="PlayerContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wr0f3")
stretch_mode = 3

[node name="PlayerContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 93.0
offset_right = 192.0
offset_bottom = 298.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PlayerContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Player 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerContainer3"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0fqwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_cpjl6")
value = 50.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="PlayerContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wr0f3")
stretch_mode = 3

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 77.0
offset_right = 400.0
offset_bottom = 282.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="EnemyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Goblin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0fqwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_cpjl6")
value = 50.0
show_percentage = false

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wr0f3")
stretch_mode = 3

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 176.0
offset_right = 432.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_31rjp")

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yjwta")
theme_override_styles/hover = SubResource("StyleBoxFlat_11txy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n3m1k")
text = "ATTACK"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yjwta")
theme_override_styles/hover = SubResource("StyleBoxFlat_11txy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n3m1k")
text = "DEFEND"

[node name="Special" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yjwta")
theme_override_styles/hover = SubResource("StyleBoxFlat_11txy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n3m1k")
text = "SPECIAL"

[node name="Item" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yjwta")
theme_override_styles/hover = SubResource("StyleBoxFlat_11txy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n3m1k")
text = "ITEM"

[node name="TextBox" type="Panel" parent="."]
layout_mode = 0
offset_top = 176.0
offset_right = 432.0
offset_bottom = 240.0
theme_override_styles/panel = SubResource("StyleBoxFlat_emc3d")

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "SAMPLE TEXT"
autowrap_mode = 3

[node name="Ticker" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "     >"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bw660")
}

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Special" to="." method="_on_special_pressed"]
